# rust-course

./: LICENSE  README.md  TODO.md
01-fundamentals/external_crates/: Cargo.toml
01-fundamentals/external_crates/src/: main.rs
01-fundamentals/hello/src/: main.rs
01-fundamentals/misc/: .env  Cargo.toml
02-intermediate/data_collections/: Cargo.toml
03-advanced/advanced/: Cargo.toml
04-threads-and-async/async_code/: Cargo.toml
04-threads-and-async/threads/: Cargo.toml
notes/: 00-intro.md  00-misc.md  01-fundamentals.md  02-data-types.md  02-memory.md  03-data-collections.md  03-memory.md  04-data-collections.md  05-advanced.md  05-threads-and-async.md  05-threads.md  06-async.md  07-macros.md  util.md
projects/billing_app/: Cargo.toml  README.md
projects/billing_app/src/lib/: bill.rs  input.rs
projects/clipstash/: .env  Cargo.toml  README.md
projects/clipstash/migrations/: 20230702221011_api_key.sql
projects/clipstash/src/lib/: mod.rs
projects/clipstash/src/lib/data/: mod.rs  model.rs  query.rs
projects/clipstash/src/lib/domain/: maintenance.rs  mod.rs  time.rs
projects/clipstash/src/lib/domain/clip/: mod.rs
projects/clipstash/src/lib/domain/clip/field/: clip_id.rs  content.rs  expires.rs  hits.rs  mod.rs  password.rs  posted.rs  shortcode.rs  title.rs
projects/clipstash/src/lib/service/: action.rs  ask.rs  mod.rs
projects/clipstash/src/lib/web/: api.rs  ctx.rs  form.rs  hitcounter.rs  http.rs  mod.rs  renderer.rs
tasks/code/: Cargo.toml
tasks/code/src/: main.rs
tasks/fundamentals/: Cargo.toml
tasks/fundamentals/src/: main.rs
(+9 files in other folders)
