[package]
name = "clipstash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clipstash"
path = "src/lib/mod.rs"

[dependencies]
chrono = {version = "0.4.26", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.99"
thiserror = "1.0.40"
uuid = {version = "1.4.0", features = ["serde", "v4"]}
