[package]
name = "clipstash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clipstash"
path = "src/lib/mod.rs"

[dependencies]
chrono = {version = "0.4.26", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.99"
thiserror = "1.0.40"
uuid = {version = "1.4.0", features = ["serde", "v4"]}
derive_more = "0.99"
rand = "0.8.5"
sqlx = {version = "0.5.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono", "uuid"]}
handlebars = {version = "4.3.7", features = ["dir_source"]}
